include $(top_srcdir)/Makefile.inc

fonts_DATA =
fonts_DATA += LiberationMono-Bold.ttf
fonts_DATA += LiberationMono-BoldItalic.ttf
fonts_DATA += LiberationMono-Italic.ttf
fonts_DATA += LiberationMono-Regular.ttf
fonts_DATA += LiberationSans-Bold.ttf
fonts_DATA += LiberationSans-BoldItalic.ttf
fonts_DATA += LiberationSans-Italic.ttf
fonts_DATA += LiberationSans-Regular.ttf
fonts_DATA += LiberationSerif-Bold.ttf
fonts_DATA += LiberationSerif-BoldItalic.ttf
fonts_DATA += LiberationSerif-Italic.ttf
fonts_DATA += LiberationSerif-Regular.ttf
