SUBDIRS=
if MAP_BINFILE
  SUBDIRS+=binfile
endif
if MAP_FILTER
  SUBDIRS+=filter
endif
if HAVELIBGARMIN
  SUBDIRS+=garmin
endif
if MAP_MG
  SUBDIRS+=mg
endif
if MAP_SHAPEFILE
  SUBDIRS+=shapefile
endif
if MAP_TEXTFILE
  SUBDIRS+=textfile
endif
if MAP_CSV
  SUBDIRS+=csv
endif

DIST_SUBDIRS=mg textfile csv binfile garmin shapefile filter
