SUBDIRS=
if SUPPORT_ESPEAK
  SUBDIRS+=espeak
endif
if SUPPORT_EZXML
  SUBDIRS+=ezxml
endif
if SUPPORT_GLIB
  SUBDIRS+=glib
endif
if SUPPORT_WORDEXP
  SUBDIRS+=wordexp
endif
if SUPPORT_WIN32
  SUBDIRS+=win32
endif
if SUPPORT_ZLIB
  SUBDIRS+=zlib
endif
if SUPPORT_LIBC
 SUBDIRS+=libc
endif
if SUPPORT_LIBPNG
 SUBDIRS+=libpng
endif
DIST_SUBDIRS=espeak ezxml glib wordexp win32 zlib libc libpng
