include $(top_srcdir)/Makefile.inc
xpm_DATA  = airport.xpm
xpm_DATA += attraction.xpm
xpm_DATA += bank.xpm
xpm_DATA += bar.xpm
xpm_DATA += boat_ramp.xpm
xpm_DATA += bus.xpm
xpm_DATA += cafe.xpm
xpm_DATA += camping.xpm
xpm_DATA += car_dealer.xpm
xpm_DATA += church.xpm
xpm_DATA += cinema.xpm
xpm_DATA += cursor.xpm
xpm_DATA += dumping-station.xpm
xpm_DATA += exit.xpm
xpm_DATA += fastfood.xpm
xpm_DATA += firebrigade.xpm
xpm_DATA += fuel.xpm 
xpm_DATA += flag_bk_tr.xpm flag_bk_wh.xpm flag_bl_wh.xpm flag_wh_bk.xpm
xpm_DATA += golf.xpm
xpm_DATA += gc_tradi.xpm
xpm_DATA += gc_multi.xpm
xpm_DATA += gc_mystery.xpm
xpm_DATA += gc_event.xpm
xpm_DATA += gc_reference.xpm
xpm_DATA += gc_webcam.xpm
xpm_DATA += gc_question.xpm
xpm_DATA += gc_stages.xpm
xpm_DATA += heliport.xpm
xpm_DATA += highway_exit.xpm
xpm_DATA += hospital.xpm hotel.xpm
xpm_DATA += information.xpm
xpm_DATA += level_crossing.xpm
xpm_DATA += library.xpm
xpm_DATA += mini_roundabout.xpm
xpm_DATA += museum.xpm
xpm_DATA += nav_left_1.xpm nav_left_2.xpm
xpm_DATA += nav_right_1.xpm nav_right_2.xpm
xpm_DATA += nav_straight.xpm nav_straight_32.xpm
xpm_DATA += nav_left_1_32.xpm nav_left_2_32.xpm
xpm_DATA += nav_right_1_32.xpm nav_right_2_32.xpm
xpm_DATA += parking.xpm
xpm_DATA += peak.xpm
xpm_DATA += pharmacy.xpm
xpm_DATA += picnic.xpm
xpm_DATA += police.xpm
xpm_DATA += post.xpm
xpm_DATA += restaurant.xpm
xpm_DATA += restroom.xpm
xpm_DATA += shopping.xpm
xpm_DATA += skiing.xpm
xpm_DATA += sports.xpm
xpm_DATA += swimming.xpm
xpm_DATA += telephone.xpm
xpm_DATA += theater.xpm
xpm_DATA += tower.xpm
xpm_DATA += townhall.xpm
xpm_DATA += traffic_signals.xpm
xpm_DATA += trailerpark.xpm
xpm_DATA += unknown.xpm
xpm_DATA += wifi.xpm

svgs  = gui_actions.svg
svgs += gui_active.svg
svgs += gui_bookmark.svg
svgs += gui_display.svg
svgs += gui_home.svg
svgs += gui_inactive.svg
svgs += gui_map.svg
svgs += gui_maps.svg
svgs += gui_rules.svg
svgs += gui_settings.svg
svgs += gui_sound.svg gui_tools.svg
svgs += gui_fullscreen.svg
svgs += gui_leave_fullscreen.svg
svgs += gui_quit.svg gui_stop.svg
svgs += gui_zoom_in.svg
svgs += gui_zoom_out.svg

flag_svgs  = country_AD.svgz country_AE.svgz country_AF.svgz country_AG.svgz country_AI.svgz country_AL.svgz country_AM.svgz
flag_svgs += country_AN.svgz country_AO.svgz country_AR.svgz country_AS.svgz country_AT.svgz country_AU.svgz country_AW.svgz
flag_svgs += country_AX.svgz country_AZ.svgz country_BA.svgz country_BB.svgz country_BD.svgz country_BE.svgz country_BF.svgz
flag_svgs += country_BG.svgz country_BH.svgz country_BI.svgz country_BJ.svgz country_BL.svgz country_BM.svgz country_BN.svgz
flag_svgs += country_BO.svgz country_BR.svgz country_BS.svgz country_BT.svgz country_BV.svgz country_BW.svgz country_BY.svgz
flag_svgs += country_BZ.svgz country_CA.svgz country_CC.svgz country_CD.svgz country_CF.svgz country_CG.svgz country_CH.svgz
flag_svgs += country_CI.svgz country_CK.svgz country_CL.svgz country_CM.svgz country_CN.svgz country_CO.svgz country_CR.svgz
flag_svgs += country_CU.svgz country_CV.svgz country_CX.svgz country_CY.svgz country_CZ.svgz country_DE.svgz country_DJ.svgz
flag_svgs += country_DK.svgz country_DM.svgz country_DO.svgz country_DZ.svgz country_EC.svgz country_EE.svgz country_EG.svgz
flag_svgs += country_EH.svgz country_ER.svgz country_ES.svgz country_ET.svgz country_FI.svgz country_FJ.svgz country_FK.svgz
flag_svgs += country_FM.svgz country_FO.svgz country_FR.svgz country_GA.svgz country_GB.svgz country_GD.svgz country_GE.svgz
flag_svgs += country_GF.svgz country_GG.svgz country_GH.svgz country_GI.svgz country_GL.svgz country_GM.svgz country_GN.svgz
flag_svgs += country_GP.svgz country_GQ.svgz country_GR.svgz country_GS.svgz country_GT.svgz country_GU.svgz country_GW.svgz
flag_svgs += country_GY.svgz country_HK.svgz country_HM.svgz country_HN.svgz country_HR.svgz country_HT.svgz country_HU.svgz
flag_svgs += country_ID.svgz country_IE.svgz country_IL.svgz country_IM.svgz country_IN.svgz country_IO.svgz country_IQ.svgz
flag_svgs += country_IR.svgz country_IS.svgz country_IT.svgz country_JE.svgz country_JM.svgz country_JO.svgz country_JP.svgz
flag_svgs += country_KE.svgz country_KG.svgz country_KH.svgz country_KI.svgz country_KM.svgz country_KN.svgz country_KP.svgz
flag_svgs += country_KR.svgz country_KW.svgz country_KY.svgz country_KZ.svgz country_LA.svgz country_LB.svgz country_LC.svgz
flag_svgs += country_LI.svgz country_LK.svgz country_LR.svgz country_LS.svgz country_LT.svgz country_LU.svgz country_LV.svgz
flag_svgs += country_LY.svgz country_MA.svgz country_MC.svgz country_MD.svgz country_ME.svgz country_MF.svgz country_MG.svgz
flag_svgs += country_MH.svgz country_MK.svgz country_ML.svgz country_MM.svgz country_MN.svgz country_MO.svgz country_MP.svgz
flag_svgs += country_MQ.svgz country_MR.svgz country_MS.svgz country_MT.svgz country_MU.svgz country_MV.svgz country_MW.svgz
flag_svgs += country_MX.svgz country_MY.svgz country_MZ.svgz country_NA.svgz country_NC.svgz country_NE.svgz country_NF.svgz
flag_svgs += country_NG.svgz country_NI.svgz country_NL.svgz country_NO.svgz country_NP.svgz country_NR.svgz country_NU.svgz
flag_svgs += country_NZ.svgz country_OM.svgz country_PA.svgz country_PE.svgz country_PF.svgz country_PG.svgz country_PH.svgz
flag_svgs += country_PK.svgz country_PL.svgz country_PM.svgz country_PN.svgz country_PR.svgz country_PS.svgz country_PT.svgz
flag_svgs += country_PW.svgz country_PY.svgz country_QA.svgz country_RE.svgz country_RO.svgz country_RS.svgz country_RU.svgz
flag_svgs += country_RW.svgz country_SA.svgz country_SB.svgz country_SC.svgz country_SD.svgz country_SE.svgz country_SG.svgz
flag_svgs += country_SH.svgz country_SI.svgz country_SJ.svgz country_SK.svgz country_SL.svgz country_SM.svgz country_SN.svgz
flag_svgs += country_SO.svgz country_SR.svgz country_ST.svgz country_SV.svgz country_SY.svgz country_SZ.svgz country_TC.svgz
flag_svgs += country_TD.svgz country_TF.svgz country_TG.svgz country_TH.svgz country_TJ.svgz country_TK.svgz country_TL.svgz
flag_svgs += country_TM.svgz country_TN.svgz country_TO.svgz country_TR.svgz country_TT.svgz country_TV.svgz country_TW.svgz
flag_svgs += country_TZ.svgz country_UA.svgz country_UG.svgz country_UM.svgz country_US.svgz country_UY.svgz country_UZ.svgz
flag_svgs += country_VA.svgz country_VC.svgz country_VE.svgz country_VG.svgz country_VI.svgz country_VN.svgz country_VU.svgz
flag_svgs += country_WF.svgz country_WS.svgz country_YE.svgz country_YT.svgz country_ZA.svgz country_ZM.svgz country_ZW.svgz

if USE_SVG
   xpm_DATA += $(svgs)
endif

if USE_SVG2PNG
%.png:*.svg
	$(srcdir)/svg2png "$@"
xpm_DATA += $(addsuffix .png,$(basename $(svgs)))
if USE_SVG2PNG_SCALES
xpm_DATA += $(foreach scale, @SVG2PNG_SCALES@, $(addsuffix _$(scale)_$(scale).png,$(basename $(svgs))))
endif
endif

EXTRA_DIST = $(xpm_DATA)
#burgerking.ico:
#	wget http://www.burgerking.de/favicon.ico -O burgerking.ico
