dnl Process this file with autoconf to produce a configure script.
AC_INIT(fib.c)

dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE

dnl Checks for library functions.

AC_OUTPUT(Makefile)
