include $(top_srcdir)/Makefile.inc
xpm_DATA = airport.xpm bank.xpm camping.xpm car_dealer.xpm dumping-station.xpm flag_bk_tr.xpm flag_bk_wh.xpm flag_bl_wh.xpm fuel.xpm golf.xpm highway_exit.xpm hospital.xpm hotel.xpm information.xpm parking.xpm police.xpm restaurant.xpm trailerpark.xpm unknown.xpm
EXTRA_DIST = $(xpm_DATA)
#burgerking.ico:
#	wget http://www.burgerking.de/favicon.ico -O burgerking.ico
